password for webpage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<SCRIPT language="JavaScript">
+  var password;
+  var pass1="techgeekshan";
+  
+  password=prompt('Please enter your password to view this page!',' ');
+  
+  if (password==pass1)
+    alert('Password Correct! Click OK to enter!');
+  else
+     {
+      window.location="http://127.0.0.1:5500/index.html#";
+      }
+  </SCRIPT>
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
