--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     alert('Password Correct! Click OK to enter!');
   else
      {
-      window.location="http://127.0.0.1:5500/index.html#";
+      window.location="https://sai1586.github.io/kishika/";
       }
   </SCRIPT>
 <style>
