password for webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <SCRIPT language="JavaScript">
   var password;
-  var pass1="techgeekshan";
+  var pass1="585586";
   
   password=prompt('Please enter your password to view this page!',' ');
   
