--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
-  <span class="w3-left w3-padding">Kishika Nallapannei</span>
+  <span class="w3-left w3-padding">Kishika Nallapanei</span>
   <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
@@ -77,7 +77,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <!-- Footer -->
   <footer>  
-    <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.linkedin.com/in/saichakravarthi/" title="saichakravarthi" target="_blank" class="w3-hover-opacity">sai chakravarthi</a></div>
+    <div class="w3-black w3-center w3-padding-24">Developed By <a href="https://www.linkedin.com/in/saichakravarthi/" title="saichakravarthi" target="_blank" class="w3-hover-opacity">sai chakravarthi</a></div>
   </footer>
 <!-- End page content -->
 </div>
